Additional minor fix for DOCS-140: Improve readability of long commands
Adapt CSS with background color similar to that of FO

--- a/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
+++ b/forgerock-doc-default-branding/trunk/src/main/resources/coredoc.css
@@ -241,6 +241,7 @@ div.synopsis {
 
 div.flat,
 div.screen {
+    background-color: #eee;
     border: thin dashed #ccc;
     margin: 0.25em 0 0.25em 0;
     padding: 0 0.25em 0 0.25em;
